add new checks and refs

--- a/references.bib
+++ b/references.bib
@@ -647,3 +647,10 @@ abstract = {  The multiple regression equation predicting lung function values f
         },
   url={https://api.semanticscholar.org/CorpusID:4610119}
 }
+
+@misc{nhanes_response,
+	title = {{NHANES} {Response} {Rates} and {Population} {Totals}},
+	url = {https://wwwn.cdc.gov/nchs/nhanes/ResponseRates.aspx#response-rates},
+	urldate = {2025-01-05},
+	file = {NHANES Response Rates and Population Totals:/Users/amin/Zotero/storage/JZZFCGWE/ResponseRates.html:text/html},
+}
