--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -102,6 +102,8 @@ library(hrbrthemes)
 library(table1)
 library(rspiro)
 library(stringr)
+library(srvyr)
+library(survey)
 
 compute_gap_reduction <- function(df, measure, type) {
 #   print(df)
@@ -149,114 +151,102 @@ createCohort <- function (ageGroup, incomePovertyRatioOnly=FALSE, sex='all', Bir
     stop("Invalid sex")
   
 
-  nhanes <- readRDS("nhanes_2007_2012.rds") 
+  nhanes <- readRDS("nhanes_2007_2012.rds") %>%
+  as_survey_design(
+    weights=MEC6YR,
+    ids=SDMVPSU,
+    strata=SDMVSTRA,
+    nest=TRUE
+  )
   
   if (AllostaticLoadOnly) {
     
-  #   wt_percent_rank <- function(x, 
-  #                             weights=rep(1, length(x)), 
-  #                             q = (0:1000) / 1000){
-  #   # fastest method to calculate breaks
-  #   breaks <- reldist::wtd.quantile(x, weight = weights, q = q, na.rm = TRUE)
-  #   # problem sometimes with ties in the breaks. This forces a way through:
-  #   breaks <- unique(breaks)
-  #   breaks[1] <- -Inf
-  #   # cut the data where the quantile breaks are:
-  #   y <- cut(x, breaks = breaks, labels = FALSE) # labels = FALSE for speed
-  #   
-  #   # convert this into a number from 0 to 1
-  #   y <- as.numeric(y) - 1
-  #   y <- y / max(y)
-  # return(y)
-  # }
-
-    
-nhanes <- nhanes %>%
-mutate(
- mean_bp_sys=mean(c(bp_sys_1, bp_sys_2, bp_sys_3, bp_sys_4), na.rm = TRUE), 
- mean_bp_dias=mean(c(bp_dias_1, bp_dias_2, bp_dias_3, bp_dias_4), na.rm = TRUE), 
- als_crp                    = as.numeric((percent_rank(crp)                    >=0.75)),
- als_wbc                    = as.numeric((percent_rank(wbc)                    >=0.75)),
- als_glycohemoglobin        = as.numeric((percent_rank(glycohemoglobin)        >=0.75)),
- als_albumin_ug_ml          = as.numeric((percent_rank(albumin_ug_ml)          <=0.25)),
- als_creatinin_mg_dl        = as.numeric((percent_rank(creatinin_mg_dl)        >=0.75)),
- als_total_cholesterol_mg_dl= as.numeric((percent_rank(total_cholesterol_mg_dl)>=0.75)),
- als_hdl_mg_dl              = as.numeric((percent_rank(hdl_mg_dl)              <=0.25)),
- als_trigly_mg_dl           = as.numeric((percent_rank(trigly_mg_dl)           >=0.75)),
- als_bmi                    = as.numeric((percent_rank(bmi)                    >=0.75)),
- als_mean_bp_sys            = as.numeric((percent_rank(mean_bp_sys)            >=0.75)),
-   als_mean_bp_dias         = as.numeric((percent_rank(mean_bp_dias)           >=0.75)),
-   als_pulse_60_sec         = as.numeric((percent_rank(pulse_60_sec)           >=0.75)),
-  ) %>%
-  mutate(als_score = rowSums(dplyr::select(., als_crp, als_wbc, als_glycohemoglobin, als_albumin_ug_ml,
-                                           als_creatinin_mg_dl, als_total_cholesterol_mg_dl, als_hdl_mg_dl, als_trigly_mg_dl,
-                                           als_bmi, als_mean_bp_sys, als_mean_bp_dias, als_pulse_60_sec
-                                           ), na.rm = TRUE))
+    nhanes <- nhanes %>%
+    mutate(
+     mean_bp_sys=mean(c(bp_sys_1, bp_sys_2, bp_sys_3, bp_sys_4), na.rm = TRUE), 
+     mean_bp_dias=mean(c(bp_dias_1, bp_dias_2, bp_dias_3, bp_dias_4), na.rm = TRUE), 
+     als_crp                    = as.numeric((percent_rank(crp)                    >=0.75)),
+     als_wbc                    = as.numeric((percent_rank(wbc)                    >=0.75)),
+     als_glycohemoglobin        = as.numeric((percent_rank(glycohemoglobin)        >=0.75)),
+     als_albumin_ug_ml          = as.numeric((percent_rank(albumin_ug_ml)          <=0.25)),
+     als_creatinin_mg_dl        = as.numeric((percent_rank(creatinin_mg_dl)        >=0.75)),
+     als_total_cholesterol_mg_dl= as.numeric((percent_rank(total_cholesterol_mg_dl)>=0.75)),
+     als_hdl_mg_dl              = as.numeric((percent_rank(hdl_mg_dl)              <=0.25)),
+     als_trigly_mg_dl           = as.numeric((percent_rank(trigly_mg_dl)           >=0.75)),
+     als_bmi                    = as.numeric((percent_rank(bmi)                    >=0.75)),
+     als_mean_bp_sys            = as.numeric((percent_rank(mean_bp_sys)            >=0.75)),
+       als_mean_bp_dias         = as.numeric((percent_rank(mean_bp_dias)           >=0.75)),
+       als_pulse_60_sec         = as.numeric((percent_rank(pulse_60_sec)           >=0.75)),
+      ) %>%
+      mutate(als_score = rowSums(dplyr::select(., als_crp, als_wbc, als_glycohemoglobin, als_albumin_ug_ml,
+                                               als_creatinin_mg_dl, als_total_cholesterol_mg_dl, als_hdl_mg_dl, als_trigly_mg_dl,
+                                               als_bmi, als_mean_bp_sys, als_mean_bp_dias, als_pulse_60_sec
+                                               ), na.rm = TRUE))
 
   }
   
   
-  stopifnot((nhanes %>% count()) == 30442) # Ensure we have the correct n
-  stopifnot((nhanes %>% filter(race %in% c(3,4)) %>% count()) == 18359) 
-  stopifnot((nhanes %>% drop_na(fev1_pre, fvc_pre)  %>% count()) == 20050) 
+  stopifnot((nhanes$variables %>% count()) == 30442) # Ensure we have the correct n
+  stopifnot(((nhanes %>% srvyr::filter(race %in% c(3,4)))$variables %>% count()) == 18359) 
+  stopifnot(((nhanes %>% drop_na(fev1_pre, fvc_pre))$variables  %>% count()) == 20050) 
   
   if (sex=='female') {
     warning('only females are included.')
-    nhanes <- nhanes %>% filter(sex==2)
+    nhanes <- nhanes %>% srvyr::filter(sex==2)
   }
   
   if (sex=='male') {
     warning('only males are included.')
-    nhanes <- nhanes %>% filter(sex==1)
+    nhanes <- nhanes %>% srvyr::filter(sex==1)
   }
 
   nhanes <- nhanes %>%
     mutate(fev1 = fev1_pre,
            fvc  = fvc_pre) %>%
     drop_na(fev1, fvc) %>%
-    filter(spiro_status_pre == 1) %>%
-    filter(fev1_quality_pre == "A" | fev1_quality_pre == "B") %>%
-    filter(fvc_quality_pre  == "A" | fvc_quality_pre  == "B")
+    srvyr::filter(spiro_status_pre == 1) %>%
+    srvyr::filter(fev1_quality_pre == "A" | fev1_quality_pre == "B") %>%
+    srvyr::filter(fvc_quality_pre  == "A" | fvc_quality_pre  == "B")
     # mutate(race_text_nhanes = str_remove(race_text_nhanes, "Non-Hispanic "))
   
   message(paste0("NHANES N (excluding missing or low quality spiro: ", 
-                 (nhanes %>% count())))
+                 (nhanes$variables %>% count())))
   
   if (BirthCountry=='all'){
       nhanes_bw <- nhanes %>%
-        filter(race %in% includedRace) %>%
+        srvyr::filter(race %in% includedRace) %>%
         mutate(race=factor(race, levels=includedRace))
   } else  {
           nhanes_bw <- nhanes %>%
-            filter(race %in% includedRace) %>%
-            filter(birth_country==BirthCountry) %>%
+            srvyr::filter(race %in% includedRace) %>%
+            srvyr::filter(birth_country==BirthCountry) %>%
             mutate(race=factor(race, levels=includedRace))
 
   } 
 
   message(paste0("NHANES included races N (excluding missing or low quality spiro: ", 
-                 (nhanes_bw %>% count())))
+                 (nhanes_bw$variables %>% count())))
   
 if (ageGroup=="adult") {
 nhanes_bw <- nhanes_bw %>%
-  filter(age>=20)
+  srvyr::filter(age>=20)
 
   message(paste0(ageGroup, "-NHANES : ", 
-                 (nhanes_bw %>% count())))
+                 (nhanes_bw$variables %>% count())))
 }
   
 if (ageGroup=="youth") {
 nhanes_bw <- nhanes_bw %>%
-  filter(age<20)
+  srvyr::filter(age<20)
 
   message(paste0(ageGroup, "-NHANES : ", 
-                 (nhanes_bw %>% count())))
+                 (nhanes_bw$variables %>% count())))
 }
   
 if (ageGroup=="all_ages") {
 
   message(paste0(ageGroup, "-NHANES : ", 
-                 (nhanes_bw %>% count())))
+                 (nhanes_bw$variables %>% count())))
 }
  
 #vis_miss(nhanes_bw, warn_large_data = F)
@@ -270,12 +260,12 @@ ref0 <- nhanes_bw %>%
         ) 
   
 
-ref0 %>%
+ref0$variables %>%
   group_by(race) %>%
   count()
 
 ref1 <- ref0 %>%
-  filter ((is.na(current_smoke) | (current_smoke == "3")) &
+  srvyr::filter ((is.na(current_smoke) | (current_smoke == "3")) &
          (is.na(ever_100_smoke) | (ever_100_smoke != "1")) &
          (is.na(last_5_days_cigarettes) |  (last_5_days_cigarettes != "1")) &
          (is.na(last_5_days_pipes) | (last_5_days_pipes != "1")) &
@@ -290,23 +280,23 @@ ref1 <- ref0 %>%
   mutate(ref="reference")
 
 if (incomePovertyRatioOnly) {
-  ref2 <- ref1 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=1)) %>%
+  ref2 <- ref1 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=1)) %>%
   mutate(ref="income_poverty_ratio>=1")
-  ref3 <- ref2 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=1.5)) %>%
+  ref3 <- ref2 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=1.5)) %>%
   mutate(ref="income_poverty_ratio>=1.5")
-  ref4 <- ref3 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=2)) %>%
+  ref4 <- ref3 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=2)) %>%
   mutate(ref="income_poverty_ratio>=2")
-  ref5 <- ref4 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=2.5))  %>%
+  ref5 <- ref4 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=2.5))  %>%
   mutate(ref="income_poverty_ratio>=2.5")
-  ref6 <- ref5 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=3)) %>%
+  ref6 <- ref5 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=3)) %>%
   mutate(ref="income_poverty_ratio>=3")
-  ref7 <- ref6 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=3.5))  %>%
+  ref7 <- ref6 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=3.5))  %>%
   mutate(ref="income_poverty_ratio>=3.5")
-  ref8 <- ref7 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=4))  %>%
+  ref8 <- ref7 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=4))  %>%
   mutate(ref="income_poverty_ratio>=4")
-  ref9 <- ref8 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=4.5))  %>%
+  ref9 <- ref8 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=4.5))  %>%
   mutate(ref="income_poverty_ratio>=4.5")
-  ref10<- ref9 %>% filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=5))  %>%
+  ref10<- ref9 %>% srvyr::filter(is.na(income_poverty_ratio) | (income_poverty_ratio>=5))  %>%
   mutate(ref="income_poverty_ratio>=5")
   refs <- list(ref1, ref2, ref3, ref4, ref5, ref6, ref7, ref8, ref9, ref10)
 
@@ -314,23 +304,23 @@ if (incomePovertyRatioOnly) {
 
 
 if (AllostaticLoadOnly) {
-  ref2 <- ref1 %>% filter(is.na(als_score) | (als_score<=8)) %>%
+  ref2 <- ref1 %>% srvyr::filter(is.na(als_score) | (als_score<=8)) %>%
   mutate(ref="als_score<=8")
-  ref3 <- ref2 %>% filter(is.na(als_score) | (als_score<=7)) %>%
+  ref3 <- ref2 %>% srvyr::filter(is.na(als_score) | (als_score<=7)) %>%
   mutate(ref="als_score<=7")
-  ref4 <- ref3 %>% filter(is.na(als_score) | (als_score<=6)) %>%
+  ref4 <- ref3 %>% srvyr::filter(is.na(als_score) | (als_score<=6)) %>%
   mutate(ref="als_score<=6")
-  ref5 <- ref4 %>% filter(is.na(als_score) | (als_score<=5))  %>%
+  ref5 <- ref4 %>% srvyr::filter(is.na(als_score) | (als_score<=5))  %>%
   mutate(ref="als_score<=5")
-  ref6 <- ref5 %>% filter(is.na(als_score) | (als_score<=4)) %>%
+  ref6 <- ref5 %>% srvyr::filter(is.na(als_score) | (als_score<=4)) %>%
   mutate(ref="als_score<=4")
-  ref7 <- ref6 %>% filter(is.na(als_score) | (als_score<=3))  %>%
+  ref7 <- ref6 %>% srvyr::filter(is.na(als_score) | (als_score<=3))  %>%
   mutate(ref="als_score<=3")
-  ref8 <- ref7 %>% filter(is.na(als_score) | (als_score<=2))  %>%
+  ref8 <- ref7 %>% srvyr::filter(is.na(als_score) | (als_score<=2))  %>%
   mutate(ref="als_score<=2")
-  ref9 <- ref8 %>% filter(is.na(als_score) | (als_score<=1))  %>%
+  ref9 <- ref8 %>% srvyr::filter(is.na(als_score) | (als_score<=1))  %>%
   mutate(ref="als_score<=1")
-  ref10<- ref9 %>% filter(is.na(als_score) | (als_score<=0))  %>%
+  ref10<- ref9 %>% srvyr::filter(is.na(als_score) | (als_score<=0))  %>%
   mutate(ref="als_score<=0")
   refs <- list(ref1, ref2, ref3, ref4, ref5, ref6, ref7, ref8, ref9, ref10)
 
@@ -339,7 +329,7 @@ if (AllostaticLoadOnly) {
 
 if (homeOwnershipOnly) {
   ref2 <- ref1 %>% 
-    filter(is.na(home_ownership) | (home_ownership==1)) %>%
+    srvyr::filter(is.na(home_ownership) | (home_ownership==1)) %>%
   mutate(ref="home owner")
   refs <- list(ref1, ref2)
 
@@ -347,7 +337,7 @@ if (homeOwnershipOnly) {
 
 if (leaveOneIn) {
   ref2 <- ref1 %>%
-    filter((is.na(mineral_dusts) | (mineral_dusts!=1)) & 
+    srvyr::filter((is.na(mineral_dusts) | (mineral_dusts!=1)) & 
          (is.na(organic_dusts)   | (organic_dusts!=1)) & 
          (is.na(exhaust_fumes)   | (exhaust_fumes!=1)) & 
          (is.na(other_fumes)     | (other_fumes!=1))) %>%
@@ -355,47 +345,47 @@ if (leaveOneIn) {
   
   
 ref3 <- ref1 %>%
-      filter((is.na(vigorous_work) | (vigorous_work==1)) | 
+      srvyr::filter((is.na(vigorous_work) | (vigorous_work==1)) | 
          (is.na(vigorous_recreational)   | (vigorous_recreational==1)) | 
          (is.na(moderate_work)   | (moderate_work==1)) | 
          (is.na(moderate_recreational)   | (moderate_recreational==1)))  %>%
   mutate(ref="physically active")
 
 ref4 <- ref1 %>%
-      filter((is.na(maternal_smoke) | (maternal_smoke!=1))) %>% #TODO Maternal smoke not available for those over 15 years
+      srvyr::filter((is.na(maternal_smoke) | (maternal_smoke!=1))) %>% #TODO Maternal smoke not available for those over 15 years
   mutate(ref="no maternal smoke")
   
 ref5 <- ref1 %>%  
-      filter((is.na(smoker_in_household) | (smoker_in_household != "1"))) %>%
+      srvyr::filter((is.na(smoker_in_household) | (smoker_in_household != "1"))) %>%
       mutate(ref="no 2ndhand smoke")
 
 ref6 <- ref1 %>%
-      filter((is.na(bmi) | (bmi<=30))) %>%
+      srvyr::filter((is.na(bmi) | (bmi<=30))) %>%
   mutate(ref="not obese")
 
 ref7 <- ref1 %>%
-    filter(is.na(home_ownership) | (home_ownership==1))  %>%
+    srvyr::filter(is.na(home_ownership) | (home_ownership==1))  %>%
   mutate(ref="homeowner")
 
 ref8 <- ref1 %>%
-     filter((is.na(has_insurance) | 
+     srvyr::filter((is.na(has_insurance) | 
                (has_insurance==1)))  %>%
   mutate(ref="insured")
 
 if (ageGroup=="adult") {
   ref9 <- ref1 %>%
-    filter(is.na(education_adults) | (education_adults %in% c(4,5)))  %>%
+    srvyr::filter(is.na(education_adults) | (education_adults %in% c(4,5)))  %>%
   mutate(ref="educated")
 }
 
 if (ageGroup=="youth") {
   ref9 <- ref1 %>%
-    filter(is.na(now_attending_school) | (now_attending_school != 3)| (age<6))  %>%
+    srvyr::filter(is.na(now_attending_school) | (now_attending_school != 3)| (age<6))  %>%
   mutate(ref="educated")
 }
 
 ref10 <- ref1 %>%
-     filter((is.na(healthy_diet) | 
+    srvyr::filter((is.na(healthy_diet) | 
                (healthy_diet==1) | 
                (healthy_diet==2) | 
                (healthy_diet==3)))  %>%
@@ -404,7 +394,7 @@ ref10 <- ref1 %>%
 
 if (!incomePovertyRatioOnly & !homeOwnershipOnly & !AllostaticLoadOnly &!leaveOneIn) {
 ref2 <- ref1 %>%
-    filter((is.na(mineral_dusts) | (mineral_dusts!=1)) & 
+    srvyr::filter((is.na(mineral_dusts) | (mineral_dusts!=1)) & 
          (is.na(organic_dusts)   | (organic_dusts!=1)) & 
          (is.na(exhaust_fumes)   | (exhaust_fumes!=1)) & 
          (is.na(other_fumes)     | (other_fumes!=1))) %>%
@@ -412,36 +402,36 @@ ref2 <- ref1 %>%
   
   
 ref3 <- ref2 %>%
-      filter((is.na(vigorous_work) | (vigorous_work==1)) | 
+      srvyr::filter((is.na(vigorous_work) | (vigorous_work==1)) | 
          (is.na(vigorous_recreational)   | (vigorous_recreational==1)) | 
          (is.na(moderate_work)   | (moderate_work==1)) | 
          (is.na(moderate_recreational)   | (moderate_recreational==1)))  %>%
   mutate(ref="physically active")
 
 ref4 <- ref3 %>%
-      filter((is.na(maternal_smoke) | (maternal_smoke!=1))) %>% #TODO Maternal smoke not available for those over 15 years
+      srvyr::filter((is.na(maternal_smoke) | (maternal_smoke!=1))) %>% #TODO Maternal smoke not available for those over 15 years
   mutate(ref="no maternal smoke")
   
 ref5 <- ref4 %>%  
-      filter((is.na(smoker_in_household) | (smoker_in_household != "1"))) %>%
+      srvyr::filter((is.na(smoker_in_household) | (smoker_in_household != "1"))) %>%
       mutate(ref="no 2ndhand smoke")
 
 ref6 <- ref5 %>%
-      filter((is.na(bmi) | (bmi<=30))) %>%
+      srvyr::filter((is.na(bmi) | (bmi<=30))) %>%
   mutate(ref="not obese")
 
 ref7 <- ref6 %>%
-    filter(is.na(home_ownership) | (home_ownership==1))  %>%
+    srvyr::filter(is.na(home_ownership) | (home_ownership==1))  %>%
   mutate(ref="homeowner")
 
 ref8 <- ref7 %>%
-     filter((is.na(has_insurance) | 
+     srvyr::filter((is.na(has_insurance) | 
                (has_insurance==1)))  %>%
   mutate(ref="insured")
 
 if (ageGroup=="adult") {
   ref9 <- ref8 %>%
-    filter(is.na(education_adults) | (education_adults %in% c(4,5)))  %>%
+  srvyr::filter(is.na(education_adults) | (education_adults %in% c(4,5)))  %>%
   mutate(ref="educated")
 }
 
@@ -452,7 +442,7 @@ if (ageGroup=="youth") {
 }
 
 ref10 <- ref9 %>%
-     filter((is.na(healthy_diet) | 
+     srvyr::filter((is.na(healthy_diet) | 
                (healthy_diet==1) | 
                (healthy_diet==2) | 
                (healthy_diet==3)))  %>%
@@ -460,13 +450,13 @@ ref10 <- ref9 %>%
 
 
   ref11 <- ref10 %>%
-     filter((is.na(lang_home_hispanic) | 
+     srvyr::filter((is.na(lang_home_hispanic) | 
                (lang_home_hispanic==4) | 
                (lang_home_hispanic==5)))  %>%
-     filter((is.na(lang_home_asian) | 
+     srvyr::filter((is.na(lang_home_asian) | 
                (lang_home_asian==4) | 
                (lang_home_asian==5)))  %>%
-     filter((is.na(lang_home_en_bw) | 
+     srvyr::filter((is.na(lang_home_en_bw) | 
                (lang_home_en_bw==1)))  %>%
   mutate(ref="English at home")
   
